src/objects/Apttus__MergeEvent__c.object
<CustomObject>
    <description>Holds document merge events for subscribers to handle</description>
    <fields>
        <fullName>Apttus__Action__c</fullName>
        <description>The action which triggered the event</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preview</fullName>
                </value>
                <value>
                    <fullName>Generate</fullName>
                </value>
                <value>
                    <fullName>Generate Supporting Document</fullName>
                </value>
                <value>
                    <fullName>Regenerate</fullName>
                </value>
                <value>
                    <fullName>Check Out</fullName>
                </value>
                <value>
                    <fullName>Revert Check Out</fullName>
                </value>
                <value>
                    <fullName>Check In</fullName>
                </value>
                <value>
                    <fullName>Create Offline Agreement</fullName>
                </value>
                <value>
                    <fullName>Import Offline Agreement</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__AgreementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the agreement associated with the event</description>
        <inlineHelpText>ID of the agreement associated with the event</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Merge Events</relationshipLabel>
        <relationshipName>MergeEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__CustomObjectId__c</fullName>
        <description>ID of the custom object associated with the event</description>
        <inlineHelpText>ID of the custom object associated with the event</inlineHelpText>
        <label>Custom Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__DocumentFormat__c</fullName>
        <description>The output format of the merged document</description>
        <label>Document Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DOC</fullName>
                </value>
                <value>
                    <fullName>RTF</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__DocumentInfo__c</fullName>
        <description>Additional document information</description>
        <inlineHelpText>Additional document information</inlineHelpText>
        <label>Document Info</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Clean</fullName>
                </value>
                <value>
                    <fullName>Redlines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__GroupId__c</fullName>
        <description>The event group reference</description>
        <externalId>true</externalId>
        <inlineHelpText>The event group reference</inlineHelpText>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__IsDraft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the merged document is a draft</description>
        <label>Is Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__IsPrivate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the merged document is private</description>
        <inlineHelpText>Indicates whether the merged document is private</inlineHelpText>
        <label>Is Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__ProtectionLevel__c</fullName>
        <description>The protection level applied to the merged document.</description>
        <label>Protection Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full access</fullName>
                </value>
                <value>
                    <fullName>Insert comments and tracked changes only</fullName>
                </value>
                <value>
                    <fullName>Insert comments only</fullName>
                </value>
                <value>
                    <fullName>Fill in form fields only</fullName>
                </value>
                <value>
                    <fullName>Read only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__ResultDocId__c</fullName>
        <description>The ID of the result document</description>
        <label>Result Document</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Status__c</fullName>
        <description>The event handling status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                    <label>Queued</label>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__TemplateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the template associated with the event</description>
        <label>Template</label>
        <referenceTo>Apttus__APTS_Template__c</referenceTo>
        <relationshipLabel>Merge Events</relationshipLabel>
        <relationshipName>MergeEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__VersionDetailId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the document version detail associated with the event</description>
        <inlineHelpText>ID of the document version detail associated with the event</inlineHelpText>
        <label>Version Detail</label>
        <referenceTo>Apttus__DocumentVersionDetail__c</referenceTo>
        <relationshipLabel>Merge Events</relationshipLabel>
        <relationshipName>MergeEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Merge Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merge Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>